==> RT-Thread/rt-thread/bsp/acm32/acm32f0x0-nucleo/drivers/drv_spi.c <==
#include "board.h"
#include <rtdevice.h>
#include "spi_config.h"
#define SPI_USING_RX_DMA_FLAG   (1<<0)
#define SPI_USING_TX_DMA_FLAG   (1<<1)

static rt_err_t _configure(struct rt_spi_device *device,
                              struct rt_spi_configuration *configuration)
{
    RT_ASSERT(device != RT_NULL);
    RT_ASSERT(configuration != RT_NULL);

    struct acm32_spi *spi_drv =  rt_container_of(device->bus, struct acm32_spi, spi_bus);
    spi_drv->cfg = configuration;

    return acm32_spi_init(spi_drv, configuration);
}

int rt_hw_spi_init(void)
{
    acm32_get_dma_info();
    return rt_hw_spi_bus_init();
}

rt_err_t rt_hw_spi_device_attach(const char *bus_name, const char *device_name, enum_GPIOx_t cs_gpiox, uint16_t cs_gpio_pin)
{
    rt_uint32_t alternate;
    RT_ASSERT(bus_name != RT_NULL);
    RT_ASSERT(device_name != RT_NULL);

    rt_err_t result;
    struct rt_spi_device *spi_device;
    struct acm32_hw_spi_cs *cs_pin;

    alternate = get_gpio_alternate(cs_gpiox, cs_gpio_pin);
    if (alternate == RT_UINT32_MAX)
    {
        return -RT_EINVAL;
    }

    /* initialize the cs pin && select the slave*/
    GPIO_InitTypeDef GPIO_Initure;
    GPIO_Initure.Pin = cs_gpio_pin;
    GPIO_Initure.Mode = GPIO_MODE_OUTPUT_PP;
    GPIO_Initure.Pull = GPIO_PULLUP;
    GPIO_Initure.Alternate = alternate;
    HAL_GPIO_Init(cs_gpiox, &GPIO_Initure);

    /* attach the device to spi bus*/
    spi_device = (struct rt_spi_device *)rt_malloc(sizeof(struct rt_spi_device));
    RT_ASSERT(spi_device != RT_NULL);
    cs_pin = (struct acm32_hw_spi_cs *)rt_malloc(sizeof(struct acm32_hw_spi_cs));
    RT_ASSERT(cs_pin != RT_NULL);
    cs_pin->GPIOx = cs_gpiox;
    cs_pin->GPIO_Pin = cs_gpio_pin;
    result = rt_spi_bus_attach_device(spi_device, device_name, bus_name, (void *)cs_pin);

    RT_ASSERT(result == RT_EOK);

    return result;
}
